--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
       <artifactId>javaparser-symbol-solver-core</artifactId>
       <version>3.13.3</version>
     </dependency>
+	<dependency>
+	    <groupId>org.apache.commons</groupId>
+	    <artifactId>commons-csv</artifactId>
+	    <version>1.7</version>
+	</dependency>
+	    
   </dependencies>
 
   <build>
